--- a/index.html
+++ b/index.html
@@ -41,31 +41,31 @@
         <div class="communitys">
           <div class="com1 glow-on-hover">
             <div class="comlogo">
-                 <img src="instagram.png" alt="">
+                 <img src="/contact img/instagram.png" alt="">
             </div>
             <h1>Instagram</h1>
           </div>
           <div class="com1 glow-on-hover">
             <div class="comlogo">
-                 <img src="linkedin.png" alt="">
+                 <img src="/contact img/linkedin.png" alt="">
             </div>
             <h1>Linkdin</h1>
           </div>
           <div class="com1 glow-on-hover">
             <div class="comlogo">
-                 <img src="discord.png" alt="">
+                 <img src="./contact img/discord.png" alt="">
             </div>
             <h1>Discord</h1>
           </div>
           <div class="com1 glow-on-hover">
             <div class="comlogo">
-                 <img src="whatsapp.png" alt="">
+                 <img src="./contact img/whatsapp.png" alt="">
             </div>
             <h1>WhatsApp</h1>
           </div>
           <div class="com1 glow-on-hover">
             <div class="comlogo">
-                 <img src="youtube.png" alt="">
+                 <img src="/contact img/youtube.png" alt="">
             </div>
             <h1>Youtube</h1>
           </div>
